{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 42,
  "lineage": "3805bec4-1429-5d90-ca87-7174d2791c46",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "psc_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/guru-com-vc/regions/southamerica-east1/networkEndpointGroups/psc-neg-southamerica-east1-apigee",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-09-18T15:24:09.089-07:00",
            "enable_cdn": false,
            "fingerprint": "83FSmf5EVpU=",
            "generated_id": 3531764224967930086,
            "id": "projects/guru-com-vc/global/backendServices/apigee-loadbalancer-externo-backend",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "apigee-loadbalancer-externo-backend",
            "port_name": "https",
            "project": "guru-com-vc",
            "protocol": "HTTPS",
            "self_link": "https://www.googleapis.com/compute/v1/projects/guru-com-vc/global/backendServices/apigee-loadbalancer-externo-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_region_network_endpoint_group.psc_neg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "fr-internal-apigee",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": true,
            "allow_psc_global_access": false,
            "creation_timestamp": "2023-09-18T15:24:07.292-07:00",
            "id": "projects/guru-com-vc/regions/southamerica-east1/forwardingRules/frontend-ilb-pr",
            "ip_address": "10.210.108.2",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "frontend-ilb-pr",
            "network": "https://www.googleapis.com/compute/v1/projects/guru-com-vc/global/networks/guru-gcp-prd",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "guru-com-vc",
            "region": "southamerica-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/guru-com-vc/regions/southamerica-east1/forwardingRules/frontend-ilb-pr",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/guru-com-vc/regions/southamerica-east1/subnetworks/guru-apigee-prd-2",
            "target": "https://www.googleapis.com/compute/beta/projects/guru-com-vc/regions/southamerica-east1/targetHttpProxies/proxy-http-apigee"
          },
          "dependencies": [
            "google_compute_region_target_http_proxy.proxy-ilb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.244.156.49",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-09-18T15:24:06.082-07:00",
            "id": "projects/guru-com-vc/global/addresses/loadbalancer-address",
            "name": "loadbalancer-address",
            "prefix_length": 0,
            "project": "guru-com-vc",
            "self_link": "https://www.googleapis.com/compute/v1/projects/guru-com-vc/global/addresses/loadbalancer-address"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "forwarding_rule_prd",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/guru-com-vc/global/forwardingRules/frontend-lb-pr",
            "ip_address": "35.244.156.49",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "frontend-lb-pr",
            "port_range": "443-443",
            "project": "guru-com-vc",
            "self_link": "https://www.googleapis.com/compute/v1/projects/guru-com-vc/global/forwardingRules/frontend-lb-pr",
            "target": "https://www.googleapis.com/compute/beta/projects/guru-com-vc/global/targetHttpsProxies/loadbalancer-https-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.psc_backend",
            "google_compute_global_address.default",
            "google_compute_region_network_endpoint_group.psc_neg",
            "google_compute_target_https_proxy.default",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "backend-ilb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/guru-com-vc/regions/southamerica-east1/networkEndpointGroups/psc-neg-southamerica-east1-apigee-internal",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2023-09-06T06:47:21.148-07:00",
            "enable_cdn": false,
            "fingerprint": "F2s48GocJVo=",
            "id": "projects/guru-com-vc/regions/southamerica-east1/backendServices/backend-ilb",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "backend-ilb",
            "port_name": "http",
            "project": "guru-com-vc",
            "protocol": "HTTP",
            "region": "southamerica-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/guru-com-vc/regions/southamerica-east1/backendServices/backend-ilb",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_region_network_endpoint_group.psc_internal_neg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_url_map",
      "name": "url_map_ilb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-06T06:47:43.253-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/guru-com-vc/regions/southamerica-east1/backendServices/backend-ilb",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "herE4crzYfY=",
            "host_rule": [],
            "id": "projects/guru-com-vc/regions/southamerica-east1/urlMaps/lb-apigee-internal",
            "map_id": 2982871132548709392,
            "name": "lb-apigee-internal",
            "path_matcher": [],
            "project": "guru-com-vc",
            "region": "southamerica-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/guru-com-vc/regions/southamerica-east1/urlMaps/lb-apigee-internal",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_region_backend_service.backend-ilb",
            "google_compute_region_network_endpoint_group.psc_internal_neg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-18T15:24:56.131-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/guru-com-vc/global/targetHttpsProxies/loadbalancer-https-proxy",
            "name": "loadbalancer-https-proxy",
            "project": "guru-com-vc",
            "proxy_bind": false,
            "proxy_id": 8395093000038215895,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/guru-com-vc/global/targetHttpsProxies/loadbalancer-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/guru-com-vc/global/sslCertificates/certificates"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/guru-com-vc/global/urlMaps/lb-apigee"
          },
          "dependencies": [
            "google_compute_backend_service.psc_backend",
            "google_compute_region_network_endpoint_group.psc_neg",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-18T15:24:43.643-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/guru-com-vc/global/backendServices/apigee-loadbalancer-externo-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "Sz3JuqH5h30=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/guru-com-vc/global/urlMaps/lb-apigee",
            "map_id": 871770779600384196,
            "name": "lb-apigee",
            "path_matcher": [],
            "project": "guru-com-vc",
            "self_link": "https://www.googleapis.com/compute/v1/projects/guru-com-vc/global/urlMaps/lb-apigee",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.psc_backend",
            "google_compute_region_network_endpoint_group.psc_neg"
          ]
        }
      ]
    }
  ]
}